force-app/main/default/objects/DWSalesHistory__c/DWSalesHistory__c.object-meta.xml
<CustomObject>
    <description>Gusmer DW Sales History.  Data is updated nightly</description>
    <label>DWSalesHistory</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>DWSalesHistoryKey</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DWSalesHistory</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>