force-app/main/default/objects/DWSalesHistory__c/fields/ActualQty__c.field-meta.xml
<CustomField>
    <fullName>ActualQty__c</fullName>
    <label>ActualQty</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>