force-app/main/default/objects/DWSalesHistory__c/fields/CUSTOMER_INDUSTRY__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_INDUSTRY__c</fullName>
    <label>CustomerIndustry</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>