force-app/main/default/objects/DWSalesHistory__c/fields/CUSTOMER_REF__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_REF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DWCustomer</label>
    <referenceTo>DWCustomer__c</referenceTo>
    <relationshipLabel>DWSalesHistory</relationshipLabel>
    <relationshipName>DWSalesHistoryCustomer</relationshipName>
    <type>Lookup</type>
</CustomField>