force-app/main/default/objects/DWSalesHistory__c/fields/CUSTOMER_REGION__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_REGION__c</fullName>
    <label>CustomerRegion</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>