force-app/main/default/objects/DWSalesHistory__c/fields/CUSTOMER_SALES_PERSON__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_SALES_PERSON__c</fullName>
    <label>Sales Person</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>