force-app/main/default/objects/DWSalesHistory__c/fields/CUSTOMER_SEGMENT__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_SEGMENT__c</fullName>
    <label>CustomerSegment</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>