force-app/main/default/objects/DWSalesHistory__c/fields/CUSTOMER_STATE__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_STATE__c</fullName>
    <label>CustomerState</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>