force-app/main/default/objects/DWSalesHistory__c/fields/CUSTOMER_STATE_CODE__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_STATE_CODE__c</fullName>
    <label>CustomerStateCode</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>