force-app/main/default/objects/DWSalesHistory__c/fields/CUSTOMER_TERRITORY__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_TERRITORY__c</fullName>
    <label>CustomerTerritory</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>