force-app/main/default/objects/DWSalesHistory__c/fields/CYTD_SALES_DIFF__c.field-meta.xml
<CustomField>
    <fullName>CYTD_SALES_DIFF__c</fullName>
    <formula>IF(AND(RELATIVE_SALES_YEAR__c = 0  , IS_DATEOFSALE_YTD__c = true) , NetSales__c, 0)-IF(AND(RELATIVE_SALES_YEAR__c = -1  , IS_DATEOFSALE_YTD__c = true) , NetSales__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CYTD Sales Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>