force-app/main/default/objects/DWSalesHistory__c/fields/DateOfSale__c.field-meta.xml
<CustomField>
    <fullName>DateOfSale__c</fullName>
    <label>DateOfSale</label>
    <required>true</required>
    <type>Date</type>
</CustomField>