force-app/main/default/objects/DWSalesHistory__c/fields/INVOICE__c.field-meta.xml
<CustomField>
    <fullName>INVOICE__c</fullName>
    <label>Invoice#</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>