force-app/main/default/objects/DWSalesHistory__c/fields/INVOICE_SALES_PERSON__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_SALES_PERSON__c</fullName>
    <label>SalesPersonDesc</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>