force-app/main/default/objects/DWSalesHistory__c/fields/INVOICE_SALES_PERSON_CODE__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_SALES_PERSON_CODE__c</fullName>
    <label>SalesPersonCode</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>