force-app/main/default/objects/DWSalesHistory__c/fields/InvoiceOrCredit__c.field-meta.xml
<CustomField>
    <fullName>InvoiceOrCredit__c</fullName>
    <label>InvoiceOrCredit</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>