force-app/main/default/objects/DWSalesHistory__c/fields/IS_DATEOFSALE_YTD__c.field-meta.xml
<CustomField>
    <fullName>IS_DATEOFSALE_YTD__c</fullName>
    <description>Indicates if the sales date can be used in YTD calculations</description>
    <formula>(DateOfSale__c - DATE(YEAR(DateOfSale__c), 01, 01))
&lt;=
(TODAY() - DATE(YEAR( TODAY()), 01,01))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsDateOfSaleYTD</label>
    <type>Checkbox</type>
</CustomField>