force-app/main/default/objects/DWSalesHistory__c/fields/ITEM__c.field-meta.xml
<CustomField>
    <fullName>ITEM__c</fullName>
    <label>Item</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>