force-app/main/default/objects/DWSalesHistory__c/fields/ITEM_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>ITEM_DESCRIPTION__c</fullName>
    <label>Item Description</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>