force-app/main/default/objects/DWSalesHistory__c/fields/LOCATION__c.field-meta.xml
<CustomField>
    <fullName>LOCATION__c</fullName>
    <label>Location</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>