force-app/main/default/objects/DWSalesHistory__c/fields/LOCATION_CODE__c.field-meta.xml
<CustomField>
    <fullName>LOCATION_CODE__c</fullName>
    <label>LocationCode</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>