force-app/main/default/objects/DWSalesHistory__c/fields/NetSales__c.field-meta.xml
<CustomField>
    <fullName>NetSales__c</fullName>
    <label>NetSales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>