force-app/main/default/objects/DWSalesHistory__c/fields/ORDER_LINE__c.field-meta.xml
<CustomField>
    <fullName>ORDER_LINE__c</fullName>
    <label>OrderLine</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>