force-app/main/default/objects/DWSalesHistory__c/fields/ORDER_REFERENCE__c.field-meta.xml
<CustomField>
    <fullName>ORDER_REFERENCE__c</fullName>
    <label>OrderRef</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>