force-app/main/default/objects/DWSalesHistory__c/fields/PICK_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>PICK_NUMBER__c</fullName>
    <label>PickRef</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>