force-app/main/default/objects/DWSalesHistory__c/fields/PRODUCT_GROUP_CODE__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_GROUP_CODE__c</fullName>
    <label>ProductGroupCode</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>