force-app/main/default/objects/DWSalesHistory__c/fields/PRODUCT_SUPPLIER__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_SUPPLIER__c</fullName>
    <label>Supplier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>