force-app/main/default/objects/DWSalesHistory__c/fields/PRODUCT_SUPPLIER_CODE__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_SUPPLIER_CODE__c</fullName>
    <label>Supplier Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>