force-app/main/default/objects/DWSalesHistory__c/fields/PRODUCT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_TYPE__c</fullName>
    <label>Product Type</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>