force-app/main/default/objects/DWSalesHistory__c/fields/PYTD_NetSales__c.field-meta.xml
<CustomField>
    <fullName>PYTD_NetSales__c</fullName>
    <formula>IF(AND(RELATIVE_SALES_YEAR__c = -1  , IS_DATEOFSALE_YTD__c = true) , NetSales__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PYTD Net Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>