force-app/main/default/objects/DWSalesHistory__c/fields/RELATIVE_SALES_YEAR__c.field-meta.xml
<CustomField>
    <fullName>RELATIVE_SALES_YEAR__c</fullName>
    <formula>YEAR(DateOfSale__c ) - YEAR(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RelativeSalesYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>