force-app/main/default/objects/DWSalesHistory__c/fields/SALE_KEY__c.field-meta.xml
<CustomField>
    <fullName>SALE_KEY__c</fullName>
    <externalId>true</externalId>
    <label>SaleKey</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>