force-app/main/default/objects/DWSalesHistory__c/fields/SALES_PERSON_REF__c.field-meta.xml
<CustomField>
    <fullName>SALES_PERSON_REF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DWSalesPerson</label>
    <referenceTo>DWSalesPerson__c</referenceTo>
    <relationshipLabel>DWSalesPerson</relationshipLabel>
    <relationshipName>DWSalesPerson</relationshipName>
    <type>Lookup</type>
</CustomField>