force-app/main/default/objects/DWSalesHistory__c/fields/SALES_YEAR__c.field-meta.xml
<CustomField>
    <fullName>SALES_YEAR__c</fullName>
    <formula>&quot;CY&quot; + TEXT(YEAR( DateOfSale__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Year</label>
    <type>Text</type>
</CustomField>