force-app/main/default/objects/DWSalesHistory__c/fields/SHIPTO_CUSTOMER__c.field-meta.xml
<CustomField>
    <fullName>SHIPTO_CUSTOMER__c</fullName>
    <label>ShipToName</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>