force-app/main/default/objects/DWSalesHistory__c/fields/SHIPTO_CUSTOMER_CODE__c.field-meta.xml
<CustomField>
    <fullName>SHIPTO_CUSTOMER_CODE__c</fullName>
    <label>ShipToCode</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>