force-app/main/default/objects/DWSalesHistory__c/fields/SOLDTO_CUSTOMER_CODE__c.field-meta.xml
<CustomField>
    <fullName>SOLDTO_CUSTOMER_CODE__c</fullName>
    <label>Sold To Customer Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>