force-app/main/default/objects/DWSalesHistory__c/fields/STOCKROOM_CODE__c.field-meta.xml
<CustomField>
    <fullName>STOCKROOM_CODE__c</fullName>
    <label>StockroomCode</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>