force-app/main/default/objects/DWSalesHistory__c/fields/STOCKROOM_SITE__c.field-meta.xml
<CustomField>
    <fullName>STOCKROOM_SITE__c</fullName>
    <label>StockroomSite</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>