force-app/main/default/objects/DWSalesHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SOLDTO_CUSTOMER__c</columns>
    <columns>SHIPTO_CUSTOMER__c</columns>
    <columns>ITEM__c</columns>
    <columns>UnitPrice__c</columns>
    <columns>SALES_YEAR__c</columns>
    <columns>RELATIVE_SALES_YEAR__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>